--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -84,8 +84,9 @@ body {
 
 
 .button {
+    position: relative;
     width: 20ch;
-    padding: 0.75rem;
+    padding: 1rem;
     background: #003764;
     color: white;
     border: none;
@@ -94,7 +95,17 @@ body {
     transition: all 0.3s ease;
     text-transform: uppercase;
     font-weight: bold;
+    cursor: pointer;
 }
 .button:hover {
     background: #034973;
 }
+.button::after {
+    content: '';
+    position: absolute;
+    inset: 4px;
+    border: solid 2px white;
+    border-radius: 5px;
+}
+
+
