--- a/src/assets/layout.css
+++ b/src/assets/layout.css
@@ -150,6 +150,7 @@ main .menu {
     justify-content: center;
     align-items: center;
     column-gap: 1rem;
+    padding-top: 3rem;
 }
 main .cards {
     margin-left: auto;
